--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".cashe.ActivityPurchase" />
         <activity android:name=".examples_library.ActivityExamplesLibrary" />
         <activity android:name=".examples_library.date_calendar.ActivityDateCalendar" />
-        <activity android:name=".examples_library.database.ActivityDatabase"></activity>
+        <activity android:name=".examples_library.database.ActivityDatabase" />
+        <activity android:name=".examples_library.some_test.ActivitySomeTest"></activity>
     </application>
 
 </manifest>
